--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,3 +41,6 @@ jobs:
       - run: yarn lint
       - run: yarn build
       - run: yarn test
+      - run: npm publish
+        env: NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
