--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,6 +41,6 @@ jobs:
       - run: yarn lint
       - run: yarn build
       - run: yarn test
-      - run: npm publish
+      - run: yarn publish
         env: NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
