--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,5 +42,6 @@ jobs:
       - run: yarn build
       - run: yarn test
       - run: yarn publish
-        env: NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
