wip: tests are failing in the pipeline; constants.test.ts is failing upstream, see: https://github.com/Uniswap/uniswap-v2-sdk/runs/2206616489\?check_suite_focus\=true\#step:7:767 - need to update caniuse list;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "include": ["src", "test"],
+  "include": ["src"],
   "compilerOptions": {
     "target": "es2018",
     "module": "esnext",
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
