added npm_token to repo secrets; will it trigger publish?

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,6 +39,7 @@ jobs:
       - run: yarn
 
       - run: yarn lint
+      - run: npx browserslist@latest --update-db
       - run: yarn build
       - run: yarn test
   
@@ -57,4 +58,3 @@ jobs:
     - run: yarn publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
